Fixed some jarring colors and misaligned divs

--- a/export.css
+++ b/export.css
@@ -10,30 +10,9 @@
   --accent: #748cab;
 }
 
-div.col-main {
-  width: 100%;
-  padding: 24px;
-}
-
-.recs-feed {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-#mantle_skin > div:nth-child(3) > div > div.col-main > ul > li {
-  width: 200px !important;
-  height: 200px !important;
-}
-
-#mantle_skin > div:nth-child(3) > div > div.col-main > ul > li:nth-child(5) {
-  margin-top: 0 !important;
-}
-
 .context {
   display: none;
 }
-
 }
 
 @-moz-document url-prefix("https://www.last.fm/")
@@ -42,6 +21,7 @@ div.col-main {
   --primary-bg: #0d1321;
   --accent-bg: #1d2d44;
   --shadow-bg: #3e5c76;
+  --extra-shadow-bg: #070b13;
   --primary-text: #e3e2de;
   --highlight: #748cab;
   --accent: #748cab;
@@ -65,6 +45,20 @@ a {
 .col-main,
 #id_body {
   background-color: var(--primary-bg);
+}
+
+.footer {
+    background-color: var(--extra-shadow-bg);
+}
+
+.listening-report-library-link {
+    background-color: var(--accent-bg);
+    color: var(--primary-text);
+    border-radius: 5px;
+}
+
+.listening-report-library-link:hover {
+    background-color: var(--accent);
 }
 
 .container .page-content {
@@ -244,6 +238,9 @@ td.chartlist-play,
   border-bottom: none;
 }
 
+.highcharts-background {
+    fill: var(--primary-bg);
+}
 }
 
 @-moz-document url("https://www.last.fm/charts")
